test/cases/good/extra013.lat
int main() {
    string[] a = new string[1];
    printInt(a[0].length);
    printString("ala"+a[0]+"makota");
    return 0;
}