test/cases/bad/bad055.lat
// Invalid void use

int main() {
    return 0;
}

void foo(void[] v) {}
